styles/index.css
/* purgecss start ignore */
@tailwind base;
@tailwind components;
/* purgecss end ignore */
@tailwind utilities;

@layer utilities {
  body {
    margin: 0;
    padding: 0;
    font-family: "Noto Sans TC", "Lusitana Normal", "Lusitana Bold", "cwTeXMing",
      "黑體", "Verdana", "新細明體", "Arial", "Geneva", "sans-serif",
      "helvetica";
  }
  body::-webkit-scrollbar {
    display: none;
  }
  .pb-safe {
    padding-bottom: constant(safe-area-inset-bottom);
    padding-bottom: env(safe-area-inset-bottom);
  }
  .pt-safe {
    padding-top: constant(safe-area-inset-top);
    padding-top: env(safe-area-inset-top);
  }
  .pl-safe {
    padding-left: constant(safe-area-inset-left);
    padding-left: env(safe-area-inset-left);
  }
  .pr-safe {
    padding-right: constant(safe-area-inset-right);
    padding-right: env(safe-area-inset-right);
  }
  .banner {
    background-image: url("/images/banner.png");
  }
  .banner-circle1 {
    background-image: url("/images/banner-circle-left.svg");
  }
  .banner-circle2 {
    background-image: url("/images/banner-circle-md.svg");
  }
  .header-bg {
    background: linear-gradient(to bottom, #0d0d0d, #353333e0, #88888804);
    opacity: 0.9;
  }
  .header-bg2 {
    background: linear-gradient(to bottom, #0d0d0d, #424040c2);
    opacity: 1;
  }
  .main-block2::before {
    content: "";
    display: block;
    background-size: cover;
    background-image: url("/images/main-block2.svg");
    opacity: 0.4;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }
  .main-block3::before {
    content: "";
    display: block;
    background-size: cover;
    background-image: url("/images/main-block3.svg");
    opacity: 0.4;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }
  .blockanimation {
    flex: 1;
    transition: flex 1s ease;
  }
  .blockanimation:hover {
    flex: 2;
  }
  /*
    選單線
  */
  .line {
    width: 24px;
    height: 24px;
    cursor: pointer;
    display: block;
    padding: 16px;
    position: fixed;
    z-index: 2;
  }
  .line .menu,
  .line .menu::before,
  .line .menu::after {
    background: white;
    content: "";
    display: block;
    height: 1px;
    position: absolute;
    transition: background ease 0.3s, top ease 0.3s 0.3s, transform ease 0.3s;
    width: 30px;
  }
  .line .menu {
    left: 18px;
    top: 80px;
  }
  .line .menu::before {
    top: -8px;
  }
  .line .menu::after {
    top: 8px;
  }
  /*
    點選選單變叉叉
  */
  #menu:checked + .line .menu {
    background: transparent;
  }
  #menu:checked + .line .menu::before {
    transform: rotate(45deg);
  }
  #menu:checked + .line .menu::after {
    transform: rotate(-45deg);
  }
  #menu:checked + .line .menu::before,
  #menu:checked + .line .menu::after {
    top: 0;
    transition: top ease 0.3s, transform ease 0.3s 0.3s;
  }
  /*
    選單開合
  */
  #menu:checked ~ .menu-list {
    width: 100%;
    backdrop-filter: blur(9px);
  }
  #category:checked ~ .menu-list {
    width: 100%;
    backdrop-filter: blur(9px);
  }
  .menu-list {
    width: 0px;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.3);
    position: fixed;
    top: 100px;
    z-index: 1;
    transition: all 0.6s;
    overflow: hidden;
  }
  /*
    選單向外推
  */
  .menu-list ul {
    color: white;
    list-style: none;
    margin-left: 60px;
    padding-top: 100px;
  }
  .menu-list ul > li {
    z-index: 10;
    display: block;
    width: 300px;
  }
  /*
    隱藏核許框
  */
  input#menu {
    display: none;
  }
  #loading-rotate-clockwise {
    animation: rotate-clockwise 50s linear infinite;
  }

  @keyframes rotate-clockwise {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }

  #loading-rotate-counterclockwise {
    animation: rotate-counterclockwise 20s linear infinite;
  }

  @keyframes rotate-counterclockwise {
    100% {
      transform: rotate(0deg);
    }
    0% {
      transform: rotate(360deg);
    }
  }

  .rotate {
    animation: rotate 14s alternate infinite;
  }

  @keyframes rotate {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }

  .bounceout {
    animation: 2s linear 1s infinite alternate bounceout;
  }

  @keyframes bounceout {
    0% {
      transform: translateY(5px);
    }
    100% {
      transform: translateY(-5px);
    }
  }

  .neon {
    animation: neon 2s ease-in-out infinite alternate;
  }

  @keyframes neon {
    0%,
    100% {
      text-shadow: 0 0 1px rgb(195 197 202), 0 0 5px rgb(195 197 202),
        0 0 2px rgb(195 197 202);
    }
    50% {
      text-shadow: 0 0 4px rgb(195 197 202), 0 0 10px rgb(195 197 202),
        0 0 4px rgb(195 197 202);
    }
  }

  .disappear {
    animation: disappear 4s linear forwards;
  }

  @keyframes disappear {
    from {
      opacity: 1;
    }
    to {
      opacity: 0.5;
    }
  }

  .backdrop-filter {
    backdrop-filter: blur(5px);
  }
  .project {
    background-image: url("/images/gallery-bg.png");
    /* background-size: 100% auto; */
    background-repeat: no-repeat;
  }
  .close {
    background: transparent;
    content: "";
    display: block;
    height: 30px;
    position: absolute;
    width: 50px;
    right: 0;
  }
  .close::after,
  .close::before {
    background: white;
    content: "";
    display: block;
    height: 1px;
    position: absolute;
    width: 30px;
    top: 20px;
    right: 20px;
  }

  .close::after {
    transform: rotate(45deg);
  }
  .close::before {
    transform: rotate(-45deg);
  }
  .text-shadow {
    text-shadow: 1px 1px 2px rgb(79, 77, 77), 0 0 1em #fff, 0 0 0.2em #fff;
  }
  @media (min-width: 1024px) {
    .text-shadow {
      text-shadow: 0px 0px 0px;
    }
  }

  .arrow-body {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .arrow {
    position: relative;
    width: 20px;
    height: 20px;
    border-top: 3px solid white;
    border-left: 3px solid white;
    transform: rotate(-135deg);
    animation: arrow-load 2s infinite;
  }
  .arrow:nth-child(1) {
    top: 20px;
    left: 20px;
    animation-delay: -0.4s;
  }
  .arrow:nth-child(2) {
    animation-delay: -0.2s;
  }
  /* .arrow:nth-child(2) {
    bottom: 20px;
    right: 20px;
  } */
  @keyframes arrow-load {
    0% {
      opacity: 0;
      transform: rotate(-135deg) translate(5px, 5px);
    }
    0% {
      opacity: 1;
    }
    100% {
      opacity: 0;
      transform: rotate(-135deg) translate(-5px, -5px);
    }
  }

  @media (min-width: 768px) {
    #img-mapper > img {
      width: 1000px !important;
    }
  }

  .bgsmooth {
    background-image: url("/images/history.png");
  }
}

